{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 158,
  "lineage": "4f405a68-86e6-3ea8-c6ef-bf80b8a96790",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:loadbalancer/app/laravel-api-dev-alb/58e93b08c712da22",
            "arn_suffix": "app/laravel-api-dev-alb/58e93b08c712da22",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "laravel-api-dev-alb-89228291.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:897722705454:loadbalancer/app/laravel-api-dev-alb/58e93b08c712da22",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "laravel-api-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0beee0afd0037836b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0019e91bddefc6135"
              },
              {
                "subnet_id": "subnet-022f6afde106d7e52"
              },
              {
                "subnet_id": "subnet-0406dae7ad344c727"
              },
              {
                "subnet_id": "subnet-044473ac3be141f13"
              },
              {
                "subnet_id": "subnet-0492a11f08ae72977"
              },
              {
                "subnet_id": "subnet-0f2306fb290b714f4"
              }
            ],
            "subnets": [
              "subnet-0019e91bddefc6135",
              "subnet-022f6afde106d7e52",
              "subnet-0406dae7ad344c727",
              "subnet-044473ac3be141f13",
              "subnet-0492a11f08ae72977",
              "subnet-0f2306fb290b714f4"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-alb",
              "Project": "laravel-api",
              "Type": "load-balancer"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-alb",
              "Project": "laravel-api",
              "Type": "load-balancer"
            },
            "vpc_id": "vpc-00213036e65ca748e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:listener/app/laravel-api-dev-alb/58e93b08c712da22/d2d80267f954f9b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:targetgroup/laravel-api-dev-tg/b1e3fe541fccc8f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:897722705454:listener/app/laravel-api-dev-alb/58e93b08c712da22/d2d80267f954f9b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:loadbalancer/app/laravel-api-dev-alb/58e93b08c712da22",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-http-listener",
              "Project": "laravel-api"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-http-listener",
              "Project": "laravel-api"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:targetgroup/laravel-api-dev-tg/b1e3fe541fccc8f3",
            "arn_suffix": "targetgroup/laravel-api-dev-tg/b1e3fe541fccc8f3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:897722705454:targetgroup/laravel-api-dev-tg/b1e3fe541fccc8f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:897722705454:loadbalancer/app/laravel-api-dev-alb/58e93b08c712da22"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "laravel-api-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-tg",
              "Project": "laravel-api",
              "Type": "target-group"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-tg",
              "Project": "laravel-api",
              "Type": "target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0beee0afd0037836b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beee0afd0037836b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "laravel-api-dev-alb-2025090615073234060000000c",
            "name_prefix": "laravel-api-dev-alb-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-alb-sg",
              "Project": "laravel-api",
              "Type": "alb"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-alb-sg",
              "Project": "laravel-api",
              "Type": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0de5c1b0249efea9c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0760d273a1d698661"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04875908fb88327ab"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0de5c1b0249efea9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0beee0afd0037836b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "laravel-api-dev-ecs-20250906150737060800000010",
            "name_prefix": "laravel-api-dev-ecs-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-ecs-sg",
              "Project": "laravel-api",
              "Type": "ecs"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-ecs-sg",
              "Project": "laravel-api",
              "Type": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.ecs",
            "module.vpc.aws_security_group.rds",
            "module.vpc.aws_security_group.redis",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:internet-gateway/igw-0492ad235df57a362",
            "id": "igw-0492ad235df57a362",
            "owner_id": "897722705454",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-igw",
              "Project": "laravel-api"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-igw",
              "Project": "laravel-api"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-004891299508577f7",
            "id": "rtb-004891299508577f7",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-1",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-1",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-091644b0f140606ff",
            "id": "rtb-091644b0f140606ff",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-2",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-2",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0322b11df6b6baee8",
            "id": "rtb-0322b11df6b6baee8",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-3",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-3",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0253c2b5a15c19e9f",
            "id": "rtb-0253c2b5a15c19e9f",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-4",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-4",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0871e63579c0eea2a",
            "id": "rtb-0871e63579c0eea2a",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-5",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-5",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0ad3c232365d1e273",
            "id": "rtb-0ad3c232365d1e273",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-6",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-6",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-04df44661d36d3003",
            "id": "rtb-04df44661d36d3003",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0492ad235df57a362",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-rt",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-rt",
              "Project": "laravel-api",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db47bd8e77baa3fe",
            "route_table_id": "rtb-004891299508577f7",
            "subnet_id": "subnet-0c15fc97549ec1c95"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037a09a681f966770",
            "route_table_id": "rtb-091644b0f140606ff",
            "subnet_id": "subnet-00df362f4d9608507"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0863e6fdccdd08aa3",
            "route_table_id": "rtb-0322b11df6b6baee8",
            "subnet_id": "subnet-0c1710d094b73434b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dc7470e04e97dec",
            "route_table_id": "rtb-0253c2b5a15c19e9f",
            "subnet_id": "subnet-0dc82185e46aa7600"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa66a7a6a59f8e06",
            "route_table_id": "rtb-0871e63579c0eea2a",
            "subnet_id": "subnet-002399232efe44691"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0985ee05ec524aa75",
            "route_table_id": "rtb-0ad3c232365d1e273",
            "subnet_id": "subnet-0a23cc545701f2b22"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ad14ea81e41aed4",
            "route_table_id": "rtb-04df44661d36d3003",
            "subnet_id": "subnet-044473ac3be141f13"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054abac4f5bde0e81",
            "route_table_id": "rtb-04df44661d36d3003",
            "subnet_id": "subnet-0406dae7ad344c727"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3aacdf83e33b769",
            "route_table_id": "rtb-04df44661d36d3003",
            "subnet_id": "subnet-022f6afde106d7e52"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c340b0f36433172",
            "route_table_id": "rtb-04df44661d36d3003",
            "subnet_id": "subnet-0f2306fb290b714f4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057731d2e7f44d61c",
            "route_table_id": "rtb-04df44661d36d3003",
            "subnet_id": "subnet-0492a11f08ae72977"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098292cf69c661378",
            "route_table_id": "rtb-04df44661d36d3003",
            "subnet_id": "subnet-0019e91bddefc6135"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0558f046e8d07f208",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0558f046e8d07f208",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "laravel-api-dev-alb-2025090615072746970000000a",
            "name_prefix": "laravel-api-dev-alb-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-alb-sg",
              "Project": "laravel-api",
              "Type": "alb"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-alb-sg",
              "Project": "laravel-api",
              "Type": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-08c74901b1cdaafae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c74901b1cdaafae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0558f046e8d07f208"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "laravel-api-dev-ecs-2025090615073239940000000d",
            "name_prefix": "laravel-api-dev-ecs-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-ecs-sg",
              "Project": "laravel-api",
              "Type": "ecs"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-ecs-sg",
              "Project": "laravel-api",
              "Type": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0760d273a1d698661",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0760d273a1d698661",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c74901b1cdaafae"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "laravel-api-dev-rds-2025090615073680740000000f",
            "name_prefix": "laravel-api-dev-rds-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-rds-sg",
              "Project": "laravel-api",
              "Type": "rds"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-rds-sg",
              "Project": "laravel-api",
              "Type": "rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-04875908fb88327ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04875908fb88327ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c74901b1cdaafae"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "laravel-api-dev-redis-2025090615073680490000000e",
            "name_prefix": "laravel-api-dev-redis-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-redis-sg",
              "Project": "laravel-api",
              "Type": "redis"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-redis-sg",
              "Project": "laravel-api",
              "Type": "redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-01885a66c2697258e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01885a66c2697258e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "laravel-api-dev-vpc-endpoint-20250906193140416300000001",
            "name_prefix": "laravel-api-dev-vpc-endpoint-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-vpc-endpoint-sg",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-vpc-endpoint-sg",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0c15fc97549ec1c95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c15fc97549ec1c95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-1",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-1",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-00df362f4d9608507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00df362f4d9608507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-2",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-2",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0c1710d094b73434b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1710d094b73434b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-3",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-3",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0dc82185e46aa7600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc82185e46aa7600",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-4",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-4",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-002399232efe44691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002399232efe44691",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-5",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-5",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0a23cc545701f2b22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a23cc545701f2b22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-6",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-6",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-044473ac3be141f13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044473ac3be141f13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-1",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-1",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0406dae7ad344c727",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0406dae7ad344c727",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-2",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-2",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-022f6afde106d7e52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022f6afde106d7e52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-3",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-3",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0f2306fb290b714f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2306fb290b714f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-4",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-4",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0492a11f08ae72977",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0492a11f08ae72977",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-5",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-5",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0019e91bddefc6135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0019e91bddefc6135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-6",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-6",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc/vpc-00213036e65ca748e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0873da07a00fda2ac",
            "default_route_table_id": "rtb-0132e06375e69cf16",
            "default_security_group_id": "sg-0d1dd0023ecd49258",
            "dhcp_options_id": "dopt-01ee8dff27f5d751d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00213036e65ca748e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0132e06375e69cf16",
            "owner_id": "897722705454",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-vpc",
              "Project": "laravel-api"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-vpc",
              "Project": "laravel-api"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-00c725386e5fadd7b",
            "dns_entry": [
              {
                "dns_name": "vpce-00c725386e5fadd7b-6ns73vea.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00c725386e5fadd7b-6ns73vea-us-east-1f.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00c725386e5fadd7b-6ns73vea-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00c725386e5fadd7b-6ns73vea-us-east-1e.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00c725386e5fadd7b-6ns73vea-us-east-1d.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00c725386e5fadd7b-6ns73vea-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00c725386e5fadd7b-6ns73vea-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07504971S6XTRE6QBZ7F"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z075049620PJLA5SYT6GD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00c725386e5fadd7b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-046431bf26b20eea1",
              "eni-04f8071ac9ee2d35a",
              "eni-0758e9fefed86062b",
              "eni-0b830d12ff3a91083",
              "eni-0e8dcc4344927ed3d",
              "eni-0f788bf34cbd94c0c"
            ],
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01885a66c2697258e"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.86",
                "subnet_id": "subnet-0c15fc97549ec1c95"
              },
              {
                "ipv4": "10.0.11.164",
                "subnet_id": "subnet-00df362f4d9608507"
              },
              {
                "ipv4": "10.0.12.55",
                "subnet_id": "subnet-0c1710d094b73434b"
              },
              {
                "ipv4": "10.0.13.192",
                "subnet_id": "subnet-0dc82185e46aa7600"
              },
              {
                "ipv4": "10.0.14.226",
                "subnet_id": "subnet-002399232efe44691"
              },
              {
                "ipv4": "10.0.15.192",
                "subnet_id": "subnet-0a23cc545701f2b22"
              }
            ],
            "subnet_ids": [
              "subnet-002399232efe44691",
              "subnet-00df362f4d9608507",
              "subnet-0a23cc545701f2b22",
              "subnet-0c15fc97549ec1c95",
              "subnet-0c1710d094b73434b",
              "subnet-0dc82185e46aa7600"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-ecr-api-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-ecr-api-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-04a56691f0a9a6f40",
            "dns_entry": [
              {
                "dns_name": "vpce-04a56691f0a9a6f40-c8cp1g22.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a56691f0a9a6f40-c8cp1g22-us-east-1e.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a56691f0a9a6f40-c8cp1g22-us-east-1f.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a56691f0a9a6f40-c8cp1g22-us-east-1d.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a56691f0a9a6f40-c8cp1g22-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a56691f0a9a6f40-c8cp1g22-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a56691f0a9a6f40-c8cp1g22-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02484213IYNL131W14NG"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02484213IYNL131W14NG"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z02019111JIORSLFWJAPY"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z02019111JIORSLFWJAPY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04a56691f0a9a6f40",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0156e7659cba90c7d",
              "eni-032b7519c500e646c",
              "eni-053fae8ba04aaaf22",
              "eni-0622d125e2ab697d3",
              "eni-086641b3b2d4b3fec",
              "eni-0ac1a3893f78def73"
            ],
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01885a66c2697258e"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.152",
                "subnet_id": "subnet-0c15fc97549ec1c95"
              },
              {
                "ipv4": "10.0.11.129",
                "subnet_id": "subnet-00df362f4d9608507"
              },
              {
                "ipv4": "10.0.12.176",
                "subnet_id": "subnet-0c1710d094b73434b"
              },
              {
                "ipv4": "10.0.13.235",
                "subnet_id": "subnet-0dc82185e46aa7600"
              },
              {
                "ipv4": "10.0.14.231",
                "subnet_id": "subnet-002399232efe44691"
              },
              {
                "ipv4": "10.0.15.198",
                "subnet_id": "subnet-0a23cc545701f2b22"
              }
            ],
            "subnet_ids": [
              "subnet-002399232efe44691",
              "subnet-00df362f4d9608507",
              "subnet-0a23cc545701f2b22",
              "subnet-0c15fc97549ec1c95",
              "subnet-0c1710d094b73434b",
              "subnet-0dc82185e46aa7600"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-ecr-dkr-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-ecr-dkr-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-05f8899822ddf1581",
            "dns_entry": [
              {
                "dns_name": "vpce-05f8899822ddf1581-w6e61rgs.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05f8899822ddf1581-w6e61rgs-us-east-1f.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05f8899822ddf1581-w6e61rgs-us-east-1d.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05f8899822ddf1581-w6e61rgs-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05f8899822ddf1581-w6e61rgs-us-east-1e.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05f8899822ddf1581-w6e61rgs-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05f8899822ddf1581-w6e61rgs-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0878622Z8V5O4Z9BBX2"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07512993GSJFWVKYYHPE"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0202412281O960IL111E"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z08839061ALP7YLNBUZL9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05f8899822ddf1581",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001a28ae6439079a0",
              "eni-027bc4b84b39169c7",
              "eni-0378cdb521737a90f",
              "eni-06c797d3dc9e88779",
              "eni-0726bdf2bdd7d2b7b",
              "eni-0d4aae2212f4bee31"
            ],
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01885a66c2697258e"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.169",
                "subnet_id": "subnet-0c15fc97549ec1c95"
              },
              {
                "ipv4": "10.0.11.14",
                "subnet_id": "subnet-00df362f4d9608507"
              },
              {
                "ipv4": "10.0.12.118",
                "subnet_id": "subnet-0c1710d094b73434b"
              },
              {
                "ipv4": "10.0.13.225",
                "subnet_id": "subnet-0dc82185e46aa7600"
              },
              {
                "ipv4": "10.0.14.241",
                "subnet_id": "subnet-002399232efe44691"
              },
              {
                "ipv4": "10.0.15.23",
                "subnet_id": "subnet-0a23cc545701f2b22"
              }
            ],
            "subnet_ids": [
              "subnet-002399232efe44691",
              "subnet-00df362f4d9608507",
              "subnet-0a23cc545701f2b22",
              "subnet-0c15fc97549ec1c95",
              "subnet-0c1710d094b73434b",
              "subnet-0dc82185e46aa7600"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-logs-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-logs-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-07b174a662cb70f48",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-07b174a662cb70f48",
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-004891299508577f7",
              "rtb-0253c2b5a15c19e9f",
              "rtb-0322b11df6b6baee8",
              "rtb-0871e63579c0eea2a",
              "rtb-091644b0f140606ff",
              "rtb-0ad3c232365d1e273"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-s3-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-s3-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-043681943e5715524",
            "dns_entry": [
              {
                "dns_name": "vpce-043681943e5715524-rzztti62.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-043681943e5715524-rzztti62-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-043681943e5715524-rzztti62-us-east-1e.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-043681943e5715524-rzztti62-us-east-1d.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-043681943e5715524-rzztti62-us-east-1f.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-043681943e5715524-rzztti62-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-043681943e5715524-rzztti62-us-east-1c.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0197094Q52B1QD8DTY2"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-043681943e5715524",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00c3f64815f7eec0a",
              "eni-03a2de684483338fb",
              "eni-0411195498b41df8a",
              "eni-0b14d880459f3622a",
              "eni-0c94f2e76bc4ea155",
              "eni-0f4e1d22177b500d5"
            ],
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01885a66c2697258e"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.60",
                "subnet_id": "subnet-0c15fc97549ec1c95"
              },
              {
                "ipv4": "10.0.11.197",
                "subnet_id": "subnet-00df362f4d9608507"
              },
              {
                "ipv4": "10.0.12.59",
                "subnet_id": "subnet-0c1710d094b73434b"
              },
              {
                "ipv4": "10.0.13.211",
                "subnet_id": "subnet-0dc82185e46aa7600"
              },
              {
                "ipv4": "10.0.14.176",
                "subnet_id": "subnet-002399232efe44691"
              },
              {
                "ipv4": "10.0.15.40",
                "subnet_id": "subnet-0a23cc545701f2b22"
              }
            ],
            "subnet_ids": [
              "subnet-002399232efe44691",
              "subnet-00df362f4d9608507",
              "subnet-0a23cc545701f2b22",
              "subnet-0c15fc97549ec1c95",
              "subnet-0c1710d094b73434b",
              "subnet-0dc82185e46aa7600"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-secretsmanager-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-secretsmanager-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00213036e65ca748e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}